site.css
html, body {
  width: 100%;
  height: 100%;
}
* {
  box-sizing: border-box;
}

body {
  background-color: black;
  font-family: sans-serif;
}

.matt-said-a-thing {
  margin: auto;
  margin-top: 25vh;
  width: 50%;
  font-size: 3rem;
  color: white;
}

.matt-said-a-thing > footer {
  font-size: 2rem;
  float: right;
  color: gray;
}

#mattisim {
  margin: 1em auto;
}

#mattisim .quote {
  animation-name: fade;
  animation-duration: 6s;
}

#mattisim .quote::before {
  content: "\201C";
}

#mattisim .quote::after {
  content: "\201D";
}

@keyframes fade {
  from {
    opacity: 0;
  }
  20% {
    opacity: 1;
  }
  80% {
    opacity: 1;
  }
  to {
    opacity: 0;
  }
}

@media (max-width: 600px) {
  .matt-said-a-thing {
    font-size: 1.75rem;
    width: 75%;
  }

  .matt-said-a-thing > footer {
    font-size: 1.25rem;
  }
}

#mattground {
  position: fixed;
  left:0;
  top:0;
  width: 100%;
  height: 100%;
  z-index: -1;
  background-image: url(./scooter.jpg);
  background-size: cover;
  filter: brightness(0.30);
  transition: transform 15s ease-out, opacity 1s ease;
  transform: scale(1.2) translate(5%, 0);
}

#mattground.fade {
  opacity: 0;
  transform: scale(1.2) translate(-5%, 0);
}

